tests/parser-test-files/lisp-toplevel-forbid.txt
================================================================================
Forbid outside of library code
================================================================================

(package test)

(lisp-toplevel
  (defvar *x* nil))

--------------------------------------------------------------------------------

error: Invalid lisp-toplevel form
  --> test:3:0
   |
 3 |  (lisp-toplevel
   |  ^
 4 | |  (defvar *x* nil))
   | |__________________^ lisp-toplevel is only allowed in library source code. To enable elsewhere, (pushnew :coalton-lisp-toplevel *features*)
